--- a/Урок4(Адаптивная верстка Bootstrap4)/css/main.css
+++ b/Урок4(Адаптивная верстка Bootstrap4)/css/main.css
@@ -1,180 +1,196 @@
 body {
-font-family: 'PT Sans', sans-serif;
+font-family: 'PT Sans', sans-serif
 }
 ul,
 li {
 display: block;
 padding: 0;
-margin: 0;
+margin: 0
 }
 h1,
 h2,
 h3,
 h4 {
 font-weight: 700;
-color: #000;
+color: #000
 }
 h3 {
-font-weight: 400;
+font-weight: 400
 }
 h2 {
-text-align: center;
+text-align: center
 }
 img {
 cursor: pointer;
 width: 100%;
-border-radius: 25px;
+border-radius: 25px
+}
+.navbar-expand-sm .navbar-nav .nav-link{
+	font-size:18px;
 }
 .yellow {
-color: #fcdb00;
+color: #fcdb00
 }
 .header {
 color: #010101;
 background-color: #fcdb00;
 padding-top: 1px;
-padding-bottom: 105px;
-box-shadow: 13px 0px 13px 0px;
+box-shadow: 13px 0px 13px 0px
 }
 .menu__list {
-margin-top: 10px;
+margin-top: 10px
 }
 .menu-item {
-margin: 0 5px;
+margin: 0 5px
 }
 .menu-item a {
-font-size: 22px;
+font-size: 18px;
 font-weight: 700;
-color: #000;
+color: #000
 }
 .subtitle__head {
 font-size: 32px;
-margin-bottom: 15px;
+margin-bottom: 15px
 }
 .subtitle__text {
 font-size: 16px;
 margin-top: 15px;
-width: 400px;
+width: 400px
 }
 .icons__item a {
 color: #000;
 font-size: 42px;
-transition: all 0.3s ease;
+transition: all 0.3s ease
 }
 .icons__item {
-margin-right: 30px;
+margin-right: 30px
 }
 .icons__item a:hover {
 text-decoration: none;
-color: #ff4800;
+color: #ff4800
 }
 .logo {
 display: flex;
 width: 100%;
 box-shadow: 0px 0px 13px 0px;
+margin-bottom: 10px;
 }
 .content-text {
 margin-top: 12px;
-margin-left: 12px;
+margin-left: 12px
 }
 .content-text:hover {
 cursor: pointer;
-text-decoration: underline;
+text-decoration: underline
 }
 .title {
 padding-top: 100px;
 padding-bottom: 70px;
-text-align: center;
+text-align: center
 }
 .title-main {
-font-size: 32px;
+font-size: 32px
 }
 .title-text {
 font-size: 20px;
 width: auto;
-margin: 0 auto;
+margin: 0 auto
 }
 .feature {
 margin-bottom: 65px;
-margin-right: 25px;
+margin-right: 25px
 }
 .feature__icon {
 font-size: 50px;
 margin-right: 37px;
-color: #000;
+color: #000
 }
 .feature__text {
-color: #898989;
+color: #898989
 }
 .feature__block {
 border: 1px solid black;
-border-radius: 25px;
+border-radius: 25px
 }
 .feature__block:hover {
 box-shadow: 0px 0px 13px 0px;
-border-color: #fcdb00;
+border-color: #fcdb00
 }
 .footer {
 box-shadow: 0px 0px 13px 0px;
 background-color: #fcdb00;
-padding: 8px 0px 10px 5px;
+padding: 8px 0px 10px 5px
 }
 .footer-text {
 color: #212529;
 font-size: 16px;
 text-align: center;
-margin: 0 auto;
+margin: 0 auto
 }
 @media screen and (max-width:992px) {
 .logo {
 display: block;
 margin: 0 auto;
 margin-bottom: 30px;
+width: 66%;
 }
 h1 {
-text-align: center;
+text-align: center
 }
 .subtitle {
-text-align: center;
+text-align: center
 }
 .subtitle__text {
 text-align: center;
 margin: 20px auto;
-width: auto;
+width: auto
 }
 }
 @media screen and (max-width:576px) {
 .logo {
-width: 100%;
+width: 78%
 }
 .menu__list {
-flex-direction: column;
+flex-direction: column
 }
 .menu-item {
 text-align: center;
-margin-bottom: 10px;
+margin-bottom: 10px
 }
 .subtitle__head {
-font-size: 24px;
+font-size: 18px
 }
 .footer {
-padding: 0px;
+padding: 0px
+}
+.row {
+line-height: 15px;
+margin-top: 5px
 }
 }
 @media screen and (min-width:577px) {
 .menu-item {
 margin: 0 5px;
 position: relative;
-left: 75px;
+left: 75px
+}
+.navbar-expand-sm .navbar-nav .nav-link{
+	font-size:10px;
+}
 }
 @media screen and (min-width:776px) {
 .menu-item {
 margin: 0 5px;
 position: relative;
-left: 165px;
+left: 165px
 }
 @media screen and (min-width:992px) {
 .menu-item {
 margin: 0 5px;
 position: relative;
-left: 10px;
+left: 10px
+}
+.navbar-expand-sm .navbar-nav .nav-link{
+	font-size:18px;
+}
 }
