--- a/Урок6(React)/portfolio/src/Component/Services/Services.css
+++ b/Урок6(React)/portfolio/src/Component/Services/Services.css
@@ -24,6 +24,7 @@
 .services>.row {
     display: flex;
     justify-content: space-around;
+    transform: translate(0, -56px);
 }
 
 .services>.row span {
@@ -34,7 +35,7 @@
     border-radius: 50%;
     color: #1d809f;
     font-size: 36px;
-    line-height: 120px
+    line-height: 120px;
 }
 
 .services>.row h4 {
@@ -58,4 +59,15 @@
 
 .services>.row span ion-icon {
     contain: none;
+}
+
+.overlay-services {
+    position: absolute;
+    width: 95.6%;
+    height: 124px;
+    transform: translate(0, -6px);
+    opacity: .5;
+    background: linear-gradient(30deg, #1d809f 12%, transparent 12.5%, transparent 87%, #1D81F5 87.5%, #1d809f 0), linear-gradient(150deg, #1d809f 12%, transparent 12.5%, transparent 87%, #1D81F5 87.5%, #1d809f 0), linear-gradient(30deg, #1d809f 12%, transparent 12.5%, transparent 87%, #1D81F5 87.5%, #1d809f 0), linear-gradient(150deg, #1d809f 12%, transparent 12.5%, transparent 87%, #1D81F5 87.5%, #1d809f 0), linear-gradient(60deg, #1d869f 25%, transparent 25.5%, transparent 75%, #1D81F5 75%, #1d869f 0), linear-gradient(60deg, #1d869f 25%, transparent 25.5%, transparent 75%, #1D81F5 75%, #1d869f 0), #1d739c;
+    background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
+    background-size: 80px 140px;
 }
