--- a/Урок6(React)/portfolio/src/index.css
+++ b/Урок6(React)/portfolio/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.container-fluid {
+     width: 100%; 
+     padding-right: 0px; 
+     padding-left: 0px; 
+    margin-right: auto;
+    margin-left: auto;
+    overflow-x: hidden;
+}
