--- a/Урок6(React)/portfolio/src/Component/Services/Services.css
+++ b/Урок6(React)/portfolio/src/Component/Services/Services.css
@@ -71,3 +71,10 @@
     background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
     background-size: 80px 140px;
 }
+
+
+@media (min-width: 573px){
+    .row {
+        flex-wrap:unset;
+    }
+}
