--- a/Урок6(React)/portfolio/src/Component/Navigation/Navigation.css
+++ b/Урок6(React)/portfolio/src/Component/Navigation/Navigation.css
@@ -227,3 +227,9 @@ ul {
 @media(min-width:568px) {
     /*.open-slide{display:none}*/
 }
+
+@media (max-width: 577px){
+    .nav-links  {
+       display:none;
+    }
+}
