--- a/Урок6(React)/portfolio/src/Component/About/About.css
+++ b/Урок6(React)/portfolio/src/Component/About/About.css
@@ -1,12 +1,12 @@
-
-p{
-	color:#fff;
+p {
+    color: #fff;
 }
 
-h2{
-	color:black;
+h2 {
+    color: black;
 }
-.backgroundAbout{
+
+.backgroundAbout {
     /*background: url(../../img/mountains.jpg) no-repeat center center fixed;*/
     background-size: cover;
 }
@@ -15,6 +15,8 @@ h2{
     padding: 20px;
     background-color: #ffffffa4;
     border-radius: 10px;
+    width: 41vh;
+
 }
 
 .education {
@@ -23,14 +25,26 @@ h2{
     border-radius: 10px;
 }
 
-.information i,.education i{
-	color:black !important;
+.information i,
+.education i {
+    color: black !important;
 }
 
 
-@media (max-width: 320px) {
-.about{
-    font-size:12px;
+@media (max-width: 418px) {
+    .information {
+        width: 100%;
+    }
+
+    .about {
+        font-size: 12px;
+    }
+
 }
 
-  }
+@media (min-width: 692px) and (max-width: 864px) {
+    .information {
+        width: 300px;
+    }
+
+}
