--- a/Урок6(React)/portfolio/src/Component/About/About.css
+++ b/Урок6(React)/portfolio/src/Component/About/About.css
@@ -30,6 +30,14 @@ h2 {
     color: black !important;
 }
 
+.information a{
+    color: #fff;
+}
+
+.information a:hover{
+    color: #1D81F5;
+}
+
 
 @media (max-width: 418px) {
     .information {
