[10]Добавлен переключатель темы, а также фиксы стилизации медиа запросов для моб. уст-в

--- a/Урок6(React)/portfolio/src/Component/About/About.css
+++ b/Урок6(React)/portfolio/src/Component/About/About.css
@@ -1,22 +1,18 @@
+h2,
 p {
-    color: #fff;
-}
-
-h2 {
     color: black;
 }
 
 .backgroundAbout {
     /*background: url(../../img/mountains.jpg) no-repeat center center fixed;*/
     background-size: cover;
+    background-color: rgba(0, 0, 0, .1) !important;
 }
 
 .information {
     padding: 20px;
     background-color: #ffffffa4;
     border-radius: 10px;
-    width: 41vh;
-
 }
 
 .education {
@@ -25,16 +21,20 @@ h2 {
     border-radius: 10px;
 }
 
+.bg-dark {
+    background-color: none;
+}
+
 .information i,
 .education i {
     color: black !important;
 }
 
-.information a{
-    color: #fff;
+.information a {
+    color: black;
 }
 
-.information a:hover{
+.information a:hover {
     color: #1D81F5;
 }
 
