--- a/Урок6(React)/portfolio/src/Component/Navigation/Navigation.css
+++ b/Урок6(React)/portfolio/src/Component/Navigation/Navigation.css
@@ -93,7 +93,6 @@ ul {
     top: 0;
     background-color: #1D81AC;
     border: 1px solid #1D81AC;
-    box-shadow: 13px 0px 13px 0px;
     z-index: 1;
 }
 
@@ -169,9 +168,6 @@ ul {
     }
 }
 
-
-/*sds*/
-
 .side-nav {
     height: 100%;
     width: 0;
@@ -184,6 +180,7 @@ ul {
     overflow-x: hidden;
     padding-top: 60px;
     transition: 0.5s;
+    list-style: none;
 }
 
 .side-nav a {
@@ -218,7 +215,7 @@ ul {
     width: 100%;
 }
 
-@media(max-width:568px) {
+@media(max-width:637px) {
     .nav-links {
         display: none
     }
@@ -228,8 +225,8 @@ ul {
     /*.open-slide{display:none}*/
 }
 
-@media (max-width: 577px){
-    .nav-links  {
-       display:none;
+@media (max-width: 577px) {
+    .nav-links {
+        display: none;
     }
 }
